--- a/server/internal/ui/views/partials/flags_rows.html
+++ b/server/internal/ui/views/partials/flags_rows.html
@@ -1,11 +1,11 @@
 {{ range .Flags }}
-<tr>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ID }}</td>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .FlagCode }}</td>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ServiceName }}{{ .ServicePort }}</td>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .Status }}</td>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .SubmitTime }}</td>
-  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">{{ .ResponseTime }}</td>
+<tr class="group hover:bg-primary/20">
+  <td class="td">{{ .ID }}</td>
+  <td class="td">{{ .FlagCode }}</td>
+  <td class="td">{{ .ServiceName }}{{ .ServicePort }}</td>
+  <td class="td">{{ .Status }}</td>
+  <td class="td">{{ .SubmitTime }}</td>
+  <td class="td">{{ .ResponseTime }}</td>
 </tr>
 {{ else }}
 <tr>
