--- a/server/assets/css/global.css
+++ b/server/assets/css/global.css
@@ -188,3 +188,11 @@
 .htmx-request #flag-table-body {
     @apply opacity-50
 }
+
+.td {
+    @apply px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200 group-hover:text-white group-hover:dark:text-white
+}
+
+.th {
+    @apply px-6 py-3 text-start text-sm text-white uppercase dark:text-white sticky top-0 font-bold
+}
