--- a/server/internal/ui/views/pages/login.html
+++ b/server/internal/ui/views/pages/login.html
@@ -49,6 +49,7 @@ document.body.addEventListener("htmx:afterRequest", function (event) {
    if (event.detail.requestConfig.elt.id === "loginForm") {
      try {
        const responseText = event.detail.xhr.responseText;
+       console.log(responseText);
        const data = JSON.parse(responseText);
 
        if (event.detail.xhr.status !== 200){
