--- a/server/internal/ui/views/partials/pagination.html
+++ b/server/internal/ui/views/partials/pagination.html
@@ -1,79 +1,129 @@
-<div class="py-1 px-4 flex items-center justify-between border-t border-gray-200 dark:border-neutral-700">
-  <div class="flex-1 flex justify-between sm:hidden">
-    {{if .Pagination.HasPrev}}
+<div class="py-1 px-4 flex items-center justify-between border-t border-gray-200 dark:border-neutral-700 ">
+   <div class="flex-1 flex justify-between sm:hidden">
+      <!-- First page -->
       <a href="#"
-         class="relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-600"
-         data-page="{{sub .Pagination.Current 1}}">
-        Previous
+         class="relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+         data-page="0">
+      First
       </a>
-    {{else}}
-      <span class="relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white cursor-not-allowed dark:bg-neutral-800 dark:text-neutral-600 dark:border-neutral-600">
-        Previous
-      </span>
-    {{end}}
-
-    {{if .Pagination.HasNext}}
+      {{if .Pagination.HasPrev}}
       <a href="#"
-         class="ml-3 relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-600"
-         data-page="{{add .Pagination.Current 1}}">
-        Next
+         class="relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+         data-page="{{ sub .Pagination.Current 1 }}">
+      Previous
       </a>
-    {{else}}
-      <span class="ml-3 relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white cursor-not-allowed dark:bg-neutral-800 dark:text-neutral-600 dark:border-neutral-600">
-        Next
+      {{else}}
+      <span class="relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white cursor-not-allowed dark:bg-background dark:text-neutral-600 dark:border-neutral-600">
+      Previous
       </span>
-    {{end}}
-  </div>
+      {{end}}
+      {{if .Pagination.HasNext}}
+      <a href="#"
+         class="ml-3 relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+         data-page="{{ add .Pagination.Current 1 }}">
+      Next
+      </a>
+      {{else}}
+      <span class="ml-3 relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white cursor-not-allowed dark:bg-background dark:text-neutral-600 dark:border-neutral-600">
+      Next
+      </span>
+      {{end}}
+      <!-- Last page -->
+      <a href="#"
+         class="ml-3 relative inline-flex items-center px-4 py-2 border text-sm font-medium rounded-md bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+         data-page="{{ sub .Pagination.Pages 1 }}">
+      Last
+      </a>
+   </div>
+   <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+      <div>
+         <p class="text-sm text-gray-700 dark:text-neutral-300">
+            Pagina <span class="font-medium">{{ add .Pagination.Current 1 }}</span> di <span class="font-medium">{{ .Pagination.Pages }}</span>
+         </p>
+      </div>
 
-  <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-    <div>
-      <p class="text-sm text-gray-700 dark:text-neutral-300">
-        Pagina <span class="font-medium">{{add .Pagination.Current 1}}</span> di <span class="font-medium">{{.Pagination.Pages}}</span>
-      </p>
-    </div>
+      <div>
+        <label for="hs-hidden-select" class="sr-only">Page size</label>
+        <select
+          id="hs-hidden-select"
+          onchange="window.location.href = `?limit=${this.value}`"
+          class="py-3 px-4 pe-9 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-accent dark:border-neutral-700 dark:text-white dark:placeholder-white-500 dark:focus:ring-neutral-600"
+        >
+          <option disabled selected>Select the page size</option>
+          <option value="20">20</option>
+          <option value="40">40</option>
+          <option value="80">80</option>
+          <option value="100">100</option>
+        </select>
+      </div>
 
-    <div>
-      <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px">
-        {{if .Pagination.HasPrev}}
-          <a href="#"
-             class="relative inline-flex items-center px-2 py-2 rounded-l-md border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-600"
-             data-page="{{sub .Pagination.Current 1}}">
-            <span class="sr-only">Precedente</span>
-            &laquo;
-          </a>
-        {{else}}
-          <span class="relative inline-flex items-center px-2 py-2 rounded-l-md border text-sm font-medium bg-white cursor-not-allowed dark:bg-neutral-800 dark:text-neutral-600 dark:border-neutral-600">
-            &laquo;
-          </span>
-        {{end}}
 
-        {{range .Pagination.PageList}}
-          {{if eq . $.Pagination.Current}}
-            <span class="relative inline-flex items-center px-4 py-2 border text-sm font-medium bg-blue-500 text-white dark:bg-blue-600">
-              {{add . 1}}
-            </span>
-          {{else}}
+      <div>
+         <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px">
+            <!-- First page -->
             <a href="#"
-               class="relative inline-flex items-center px-4 py-2 border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-600"
-               data-page="{{.}}">
-              {{add . 1}}
+               class="relative inline-flex items-center px-2 py-2 rounded-l-md border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+               data-page="0">
+               <span class="sr-only">Prima</span>
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" transform="rotate(180)">
+                  <path fill="currentColor" d="m6.05 19l5-7l-5-7H8.5l5 7l-5 7zM12 19l5-7l-5-7h2.45l5 7l-5 7z"/>
+               </svg>
             </a>
-          {{end}}
-        {{end}}
-
-        {{if .Pagination.HasNext}}
-          <a href="#"
-             class="relative inline-flex items-center px-2 py-2 rounded-r-md border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-neutral-800 dark:text-neutral-200 dark:border-neutral-600"
-             data-page="{{add .Pagination.Current 1}}">
-            <span class="sr-only">Successiva</span>
-            &raquo;
-          </a>
-        {{else}}
-          <span class="relative inline-flex items-center px-2 py-2 rounded-r-md border text-sm font-medium bg-white cursor-not-allowed dark:bg-neutral-800 dark:text-neutral-600 dark:border-neutral-600">
-            &raquo;
-          </span>
-        {{end}}
-      </nav>
-    </div>
-  </div>
+            {{if .Pagination.HasPrev}}
+            <a href="#"
+               class="relative inline-flex items-center px-2 py-2 border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+               data-page="{{ sub .Pagination.Current 1 }}">
+               <span class="sr-only">Precedente</span>
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" transform="rotate(-90)">
+                  <path fill="currentColor" d="m12 10.8l-4.6 4.6L6 14l6-6l6 6l-1.4 1.4z"/>
+               </svg>
+            </a>
+            {{else}}
+            <span class="relative inline-flex items-center px-2 py-2 border text-sm font-medium bg-white cursor-not-allowed dark:bg-background dark:text-neutral-600 dark:border-neutral-600">
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" transform="rotate(-90)">
+                  <path fill="currentColor" d="m12 10.8l-4.6 4.6L6 14l6-6l6 6l-1.4 1.4z"/>
+               </svg>
+            </span>
+            {{end}}
+            {{range .Pagination.PageList}}
+            {{if eq . $.Pagination.Current}}
+            <span class="relative inline-flex items-center px-4 py-2 border text-sm font-medium bg-primary text-background dark:bg-primary">
+            {{ add . 1 }}
+            </span>
+            {{else}}
+            <a href="#"
+               class="relative inline-flex items-center px-4 py-2 border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+               data-page="{{ . }}">
+            {{ add . 1 }}
+            </a>
+            {{end}}
+            {{end}}
+            {{if .Pagination.HasNext}}
+            <a href="#"
+               class="relative inline-flex items-center px-2 py-2 border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+               data-page="{{ add .Pagination.Current 1 }}">
+               <span class="sr-only">Successiva</span>
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" transform="rotate(90)">
+                  <path fill="currentColor" d="m12 10.8l-4.6 4.6L6 14l6-6l6 6l-1.4 1.4z"/>
+               </svg>
+            </a>
+            {{else}}
+            <span class="relative inline-flex items-center px-2 py-2 border text-sm font-medium bg-white cursor-not-allowed dark:bg-background dark:text-neutral-600 dark:border-neutral-600">
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" transform="rotate(90)">
+                  <path fill="currentColor" d="m12 10.8l-4.6 4.6L6 14l6-6l6 6l-1.4 1.4z"/>
+               </svg>
+            </span>
+            {{end}}
+            <!-- Last page -->
+            <a href="#"
+               class="relative inline-flex items-center px-2 py-2 rounded-r-md border text-sm font-medium bg-white hover:bg-gray-50 dark:bg-background dark:text-neutral-200 dark:border-neutral-600"
+               data-page="{{ sub .Pagination.Pages 1 }}">
+               <span class="sr-only">Ultima</span>
+               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                  <path fill="currentColor" d="m6.05 19l5-7l-5-7H8.5l5 7l-5 7zM12 19l5-7l-5-7h2.45l5 7l-5 7z"/>
+               </svg>
+            </a>
+         </nav>
+      </div>
+   </div>
 </div>
