Refactor cookie auth middleware and improve flag submission
- Moved CookieAuthMiddleware to a dedicated function in auth.go
- Updated routes to use the new middleware function
- Added flag submission form and logic to dashboard.html
- Enhanced CSS with new utility classes for spacing and dimensions
- Fixed missing flagchecker host configuration check in SubmitFlag

The style of the submission form is not complete i have implemented only
the function

--- a/server/internal/ui/views/partials/modal.html
+++ b/server/internal/ui/views/partials/modal.html
@@ -158,7 +158,7 @@ window.handleConfigSubmit = handleSubmit;
 
 (async () => {
   if (!(await checkConfig())) {
-    // document.getElementById("dialog").classList.remove("hidden"); TO REMOVE ONLY DEBUG
+     document.getElementById("dialog").classList.remove("hidden"); //TO REMOVE ONLY DEBUG
   }
 })();
 
