--- a/server/internal/ui/views/pages/dashboard.html
+++ b/server/internal/ui/views/pages/dashboard.html
@@ -1,5 +1,10 @@
 {{template "partials/header" .}}
 {{template "partials/modal" .}}
+<div class="max-w-md space-y-3">
+  <textarea class="py-2 px-3 sm:py-3 sm:px-4 rounded-lg border-primary border-2 border-solid max-h-24 w-56" rows="3" placeholder="Enter the flag" maxlength="100"></textarea>
+  <button class="button h-8" onclick="SubmitFlag()">Submit</button>
+  <p id="flag-submission-status"></p>
+</div>
 <div class="flex flex-col">
    <div class="-m-1.5 overflow-x-auto">
       <div class="p-1.5 min-w-full inline-block align-middle">
@@ -50,6 +55,64 @@
 </div>
 {{template "partials/footer" .}}
 <script>
+
+  function uuidv4() {
+      return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'
+      .replace(/[xy]/g, function (c) {
+          const r = Math.random() * 16 | 0,
+              v = c == 'x' ? r : (r & 0x3 | 0x8);
+          return v.toString(16);
+      });
+  }
+
+  function submitFlag() {
+    const flagInput = document.querySelector('textarea');
+    const flag_code = flagInput.value.trim();
+
+    if (flag_code.length > 0) {
+      const flag = {
+        submit_time: Date.now(),
+        flag_code: flag_code,
+        service_port: 0,
+        service_name: "unknown",
+        team_id: 0,
+        status: "UNSUBMITTED",
+        response_time: 0,
+        id: uuidv4()
+      };
+
+      console.log("Invio il flag:", flag);
+
+      fetch('/api/v1/submit-flag', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ flag })
+      })
+      .then(response => {
+        if (!response.ok) {
+          flag_submission_status = document.getElementById('flag-submission-status');
+          flag_submission_status.textContent = 'Error during flag submission';
+          throw new Error('Error during flag submission');
+        }
+        flag_submission_status = document.getElementById('flag-submission-status');
+        flag_submission_status.textContent = 'Flag submitted successfully!';
+        return response.json();
+      })
+      .then(data => {
+        flagInput.value = '';
+        htmx.trigger(document.body, 'flagsUpdated');
+
+      })
+      .catch(error => {
+        console.error('Errore:', error);
+      });
+    }
+  }
+
+    window.SubmitFlag = submitFlag;
+
    document.addEventListener("DOMContentLoaded", () => {
      const limit = {{.Pagination.Limit}};
      const storageKey = "flags-offset";
