feat: enhance Tailwind CSS configuration and styles
- Updated Tailwind CSS build commands to include configuration file.
- Added custom scrollbar styles in global CSS.
- Refactored API calls in JavaScript to remove hardcoded host URL.
- Introduced a new function to generate UUIDs in utils.js.
- Improved dashboard layout with a new flag submission interface.
- Removed footer partial and adjusted header for logo inclusion.
- Simplified pagination component and adjusted styles for better responsiveness.
- Updated output CSS with new utility classes and styles.
- Enhanced output.min.js with a new sendFlag function for flag submissions.
- Expanded Tailwind CSS content paths to include partials and layouts.

--- a/server/assets/css/global.css
+++ b/server/assets/css/global.css
@@ -196,3 +196,20 @@
 .th {
     @apply px-6 py-3 text-start text-sm text-white uppercase dark:text-white sticky top-0 font-bold
 }
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #888;
+    border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 5px;
+}
