--- a/server/internal/ui/views/partials/header.html
+++ b/server/internal/ui/views/partials/header.html
@@ -1,3 +1,4 @@
-<header class="p-4 bg-[var(--card)] text-[var(--card-foreground)]">
-  <h1 class="text-2xl font-bold">CookieFarm</h1>
+<header class="flex p-4 bg-[var(--card)] text-[var(--card-foreground)] w-full justify-between">
+  <h1 class="text-4xl font-bold">CookieFarm</h1>
+  <img src="/images/logo.png" alt="CookieFarm Logo" class="w-14 h-14">
 </header>
